[gd_scene load_steps=3 format=3 uid="uid://c420qp25mxxbn"]

[ext_resource type="Texture2D" uid="uid://dvgadnfq6utj" path="res://assets/images/heart.png" id="1_d6l7h"]
[ext_resource type="Script" path="res://scenes/hearts/hearts.gd" id="1_feaw8"]

[node name="Hearts" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.22, 0.22)
script = ExtResource("1_feaw8")

[node name="HeartSprite" type="Sprite2D" parent="."]
texture = ExtResource("1_d6l7h")

[node name="HeartSprite2" type="Sprite2D" parent="."]
position = Vector2(145.455, 0)
texture = ExtResource("1_d6l7h")

[node name="HeartSprite3" type="Sprite2D" parent="."]
position = Vector2(290.909, 0)
texture = ExtResource("1_d6l7h")
